enable/disable camera zero added

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -41,6 +41,14 @@
     "@main_page_item_options_add_mods": {},
     "main_page_item_options_open_in_explorer": "Open in Explorer",
     "@main_page_item_options_open_in_explorer": {},
+    "main_page_item_options_enable_camera_zero": "Enable Camera Zero",
+    "@main_page_item_options_enable_camera_zero": {},
+    "main_page_item_options_disable_camera_zero": "Disable Camera Zero",
+    "@main_page_item_options_disable_camera_zero": {},
+    "main_page_enable_camera_zero_enabled_message": "Camera Zero is enabled.",
+    "@main_page_enable_camera_zero_enabled_message": {},
+    "main_page_enable_camera_zero_disabled_message": "Camera Zero is disabled.",
+    "@main_page_enable_camera_zero_disabled_message": {},
     "main_page_item_options_remove": "Remove",
     "@main_page_item_options_remove": {},
     "main_page_item_start_game_tooltip": "Start game from this homedir",
@@ -101,6 +109,8 @@
     "@settings_page_launch_arguments_title": {},
     "settings_page_launch_arguments_description": "Launch arguments to be passed to the game.",
     "@settings_page_launch_arguments_description": {},
+    "settings_page_game_configurations": "Game Configurations",
+    "@settings_page_game_configurations": {},
     "language_name_en": "English",
     "@language_name_en": {},
     "language_name_pt": "Portuguese",
