--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -41,6 +41,14 @@
     "@main_page_item_options_add_mods": {},
     "main_page_item_options_open_in_explorer": "Abrir no Explorador",
     "@main_page_item_options_open_in_explorer": {},
+    "main_page_item_options_enable_camera_zero": "Ativar Camera Zero",
+    "@main_page_item_options_enable_camera_zero": {},
+    "main_page_item_options_disable_camera_zero": "Desativar Camera Zero",
+    "@main_page_item_options_disable_camera_zero": {},
+    "main_page_enable_camera_zero_enabled_message": "Camera Zero foi ativada.",
+    "@main_page_enable_camera_zero_enabled_message": {},
+    "main_page_enable_camera_zero_disabled_message": "Camera Zero foi desativada.",
+    "@main_page_enable_camera_zero_disabled_message": {},
     "main_page_item_options_remove": "Remover",
     "@main_page_item_options_remove": {},
     "main_page_item_start_game_tooltip": "Iniciar o jogo apartir deste homedir",
@@ -101,6 +109,8 @@
     "@settings_page_launch_arguments_title": {},
     "settings_page_launch_arguments_description": "Argumentos de lançamento para serem passados ao jogo.",
     "@settings_page_launch_arguments_description": {},
+    "settings_page_game_configurations": "Configurações do Jogo",
+    "@settings_page_game_configurations": {},
     "language_name_en": "Inglês",
     "@language_name_en": {},
     "language_name_pt": "Português",
