refactoring, start environment from system tray

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -1,9 +1,9 @@
 {
     "@@locale": "pt",
     "@@author": "tihrasguinho",
-    "main_page_leading_tooltip_empty": "Por favor, selecione o executável do jogo primeiro!",
+    "main_page_leading_tooltip_empty": "Por favor, selecione primeiro o executável do jogo!",
     "@main_page_leading_tooltip_empty": {},
-    "main_page_leading_tooltip": "Abrir no Explorador",
+    "main_page_leading_tooltip": "Abrir no Explorer",
     "@main_page_leading_tooltip": {},
     "main_page_pick_game_executable_dialog_title": "Selecione o executável do Euro Truck Simulator 2!",
     "@main_page_pick_game_executable_dialog_title": {},
@@ -11,109 +11,109 @@
     "@main_page_pick_game_executable_dialog_error": {},
     "main_page_toolbar_game_not_found": "Euro Truck Simulator 2 não encontrado!",
     "@main_page_toolbar_game_not_found": {},
-    "main_page_empty_homedirs": "Voce não tem nenhum homedir ainda.",
-    "@main_page_empty_homedirs": {},
-    "main_page_add_new_homedir": "Adicionar Novo Homedir",
-    "@main_page_add_new_homedir": {},
-    "main_page_dialog_title": "Adicionar Novo Homedir",
-    "@main_page_dialog_title": {},
-    "main_page_dialog_field_name": "Nome",
-    "@main_page_dialog_field_name": {},
-    "main_page_dialog_field_name_hint": "Digite o nome do novo homedir.",
-    "@main_page_dialog_field_name_hint": {},
-    "main_page_dialog_field_name_error": "Por favor, digite um nome!",
-    "@main_page_dialog_field_name_error": {},
-    "main_page_dialog_field_path": "Caminho",
-    "@main_page_dialog_field_path": {},
-    "main_page_dialog_field_path_hint": "Digite o caminho do novo homedir.",
-    "@main_page_dialog_field_path_hint": {},
-    "main_page_dialog_field_path_error": "Por favor, digite um caminho!",
-    "@main_page_dialog_field_path_error": {},
-    "main_page_dialog_field_path_error_not_exist": "Caminho não existe!",
-    "@main_page_dialog_field_path_error_not_exist": {},
-    "main_page_dialog_button_add": "Adicionar",
-    "@main_page_dialog_button_add": {},
-    "main_page_item_options_profiles": "Listar Perfis Locais",
-    "@main_page_item_options_profiles": {},
-    "main_page_item_options_mods": "Listar Mods Locais",
-    "@main_page_item_options_mods": {},
-    "main_page_item_options_add_mods": "Adicionar Mods",
-    "@main_page_item_options_add_mods": {},
-    "main_page_item_options_open_in_explorer": "Abrir no Explorador",
-    "@main_page_item_options_open_in_explorer": {},
-    "main_page_item_options_enable_camera_zero": "Ativar Camera Zero",
-    "@main_page_item_options_enable_camera_zero": {},
-    "main_page_item_options_disable_camera_zero": "Desativar Camera Zero",
-    "@main_page_item_options_disable_camera_zero": {},
-    "main_page_enable_camera_zero_enabled_message": "Camera Zero foi ativada.",
-    "@main_page_enable_camera_zero_enabled_message": {},
-    "main_page_enable_camera_zero_disabled_message": "Camera Zero foi desativada.",
-    "@main_page_enable_camera_zero_disabled_message": {},
-    "main_page_item_options_remove": "Remover",
-    "@main_page_item_options_remove": {},
-    "main_page_item_start_game_tooltip": "Iniciar o jogo apartir deste homedir",
-    "@main_page_item_start_game_tooltip": {},
-    "main_page_item_menu_tooltip": "Mostrar Opções",
-    "@main_page_item_menu_tooltip": {},
-    "main_page_select_folder_dialog_title": "Selecione uma pasta para o seu novo homedir",
-    "@main_page_select_folder_dialog_title": {},
-    "main_page_select_mods_dialog_title": "Selecione os mods que deseja adicionar a este homedir",
-    "@main_page_select_mods_dialog_title": {},
-    "main_page_profiles_dialog_title": "Perfis (Apenas Locais)",
-    "@main_page_profiles_dialog_title": {},
-    "main_page_profiles_dialog_active_mods": "Mods Ativos",
-    "@main_page_profiles_dialog_active_mods": {},
-    "main_page_profiles_dialog_empty": "No profiles found.",
-    "@main_page_profiles_dialog_empty": {},
-    "main_page_mods_dialog_title": "Mods (Apenas Locais)",
-    "@main_page_mods_dialog_title": {},
-    "main_page_mods_dialog_empty": "No mods found.",
-    "@main_page_mods_dialog_empty": {},
-    "main_page_mods_dialog_author": "Autor",
-    "@main_page_mods_dialog_author": {},
-    "main_page_mods_dialog_version": "Versão",
-    "@main_page_mods_dialog_version": {},
-    "main_page_mods_dialog_categories": "Categorias",
-    "@main_page_mods_dialog_categories": {},
-    "main_page_mods_dialog_compatible_versions": "Versões Compatíveis",
-    "@main_page_mods_dialog_compatible_versions": {},
-    "main_page_remove_homedir_dialog_title": "Remover Este Homedir?",
-    "@main_page_remove_homedir_dialog_title": {},
-    "main_page_remove_homedir_dialog_description": "Tem certeza que deseja remover este homedir?",
-    "@main_page_remove_homedir_dialog_description": {},
-    "main_page_remove_homedir_dialog_keep_directories": "Manter a pasta do diretorio?",
-    "@main_page_remove_homedir_dialog_keep_directories": {},
-    "main_page_remove_homedir_dialog_button_cancel": "Cancelar",
-    "@main_page_remove_homedir_dialog_button_cancel": {},
-    "main_page_remove_homedir_dialog_button_confirm": "Sim, remover!",
-    "@main_page_remove_homedir_dialog_button_confirm": {},
-    "main_page_add_homedir_dialog_error_title": "Erro!",
-    "@main_page_add_homedir_dialog_error_title": {},
-    "main_page_add_homedir_dialog_error_message": "Por favor, selecione o caminho do jogo primeiro!",
-    "@main_page_add_homedir_dialog_error_message": {},
-    "main_page_loading_mods_list_message": "Carregando lista de mods\nPode demorar dependendo do número de mods",
-    "@main_page_loading_mods_list_message": {},
-    "main_page_loading_profiles_list_message": "Carregando Perfis",
-    "@main_page_loading_profiles_list_message": {},
-    "settings_page_title": "Configurações",
-    "@settings_page_title": {},
-    "settings_page_minimize_to_tray_title": "Minimizar para a bandeja do sistema quando clicar para minimizar.",
+    "main_page_empty_environments_message": "Você não possui nenhum ambiente ainda.",
+    "@main_page_empty_environments_message": {},
+    "main_page_fab_title": "Adicionar Novo Ambiente",
+    "@main_page_fab_title": {},
+    "add_environment_dialog_title": "Adicionar Novo Ambiente",
+    "@add_environment_dialog_title": {},
+    "add_environment_dialog_field_name": "Nome",
+    "@add_environment_dialog_field_name": {},
+    "add_environment_dialog_field_name_hint": "Digite o nome do novo ambiente.",
+    "@add_environment_dialog_field_name_hint": {},
+    "add_environment_dialog_field_name_error": "Por favor, insira um nome!",
+    "@add_environment_dialog_field_name_error": {},
+    "add_environment_dialog_field_path": "Caminho",
+    "@add_environment_dialog_field_path": {},
+    "add_environment_dialog_field_path_hint": "Digite o caminho do novo ambiente.",
+    "@add_environment_dialog_field_path_hint": {},
+    "add_environment_dialog_field_path_error": "Por favor, insira um caminho!",
+    "@add_environment_dialog_field_path_error": {},
+    "add_environment_dialog_field_path_error_not_exists": "O caminho não existe!",
+    "@add_environment_dialog_field_path_error_not_exists": {},
+    "add_environment_dialog_button_title": "Adicionar",
+    "@add_environment_dialog_button_title": {},
+    "main_page_environments_profiles_item": "Listar Perfis Locais",
+    "@main_page_environments_profiles_item": {},
+    "main_page_environments_mods_item": "Listar Mods Locais",
+    "@main_page_environments_mods_item": {},
+    "main_page_environments_add_mods_item": "Adicionar Mods",
+    "@main_page_environments_add_mods_item": {},
+    "main_page_environments_open_in_explorer_item": "Abrir no Explorer",
+    "@main_page_environments_open_in_explorer_item": {},
+    "main_page_environments_enable_camera_zero_item": "Ativar Câmera Zero",
+    "@main_page_environments_enable_camera_zero_item": {},
+    "main_page_environments_enable_camera_zero_item_message": "A Câmera Zero está ativada.",
+    "@main_page_environments_enable_camera_zero_item_message": {},
+    "main_page_environments_disable_camera_zero_item": "Desativar Câmera Zero",
+    "@main_page_environments_disable_camera_zero_item": {},
+    "main_page_environments_disable_camera_zero_item_message": "A Câmera Zero está desativada.",
+    "@main_page_environments_disable_camera_zero_item_message": {},
+    "main_page_environments_remove_item": "Remover",
+    "@main_page_environments_remove_item": {},
+    "main_page_environments_start_game_tooltip": "Iniciar o jogo a partir deste ambiente",
+    "@main_page_environments_start_game_tooltip": {},
+    "main_page_environments_show_menu_tooltip": "Mostrar opções",
+    "@main_page_environments_show_menu_tooltip": {},
+    "main_page_environments_pick_environment_folder_selector_title": "Selecione uma pasta para o novo ambiente",
+    "@main_page_environments_pick_environment_folder_selector_title": {},
+    "main_page_environments_pick_mods_selector_title": "Selecione mods que deseja adicionar a este ambiente",
+    "@main_page_environments_pick_mods_selector_title": {},
+    "main_page_environments_profiles_dialog_title": "Perfis (Somente Local)",
+    "@main_page_environments_profiles_dialog_title": {},
+    "main_page_environments_active_mods_dialog_subtitle": "Mods Ativos",
+    "@main_page_environments_active_mods_dialog_subtitle": {},
+    "main_page_environments_profiles_dialog_empty_message": "Nenhum perfil encontrado.",
+    "@main_page_environments_profiles_dialog_empty_message": {},
+    "main_page_environments_mods_dialog_title": "Mods (Somente Local)",
+    "@main_page_environments_mods_dialog_title": {},
+    "main_page_environments_mods_dialog_empty_message": "Nenhum mod encontrado.",
+    "@main_page_environments_mods_dialog_empty_message": {},
+    "main_page_environments_mods_dialog_author_subtitle": "Autor",
+    "@main_page_environments_mods_dialog_author_subtitle": {},
+    "main_page_environments_mods_dialog_version_subtitle": "Versão",
+    "@main_page_environments_mods_dialog_version_subtitle": {},
+    "main_page_environments_mods_dialog_categories_subtitle": "Categorias",
+    "@main_page_environments_mods_dialog_categories_subtitle": {},
+    "main_page_environments_mods_dialog_compatibility": "Versões Compatíveis",
+    "@main_page_environments_mods_dialog_compatibility": {},
+    "main_page_environments_remove_dialog_title": "Remover Este Ambiente?",
+    "@main_page_environments_remove_dialog_title": {},
+    "main_page_environments_remove_dialog_subtitle": "Tem certeza de que deseja remover este ambiente?",
+    "@main_page_environments_remove_dialog_subtitle": {},
+    "main_page_environments_remove_dialog_check_title": "Manter o diretório?",
+    "@main_page_environments_remove_dialog_check_title": {},
+    "main_page_environments_remove_dialog_cancel_button": "Cancelar",
+    "@main_page_environments_remove_dialog_cancel_button": {},
+    "main_page_environments_remove_dialog_confirm_button": "Sim, remover!",
+    "@main_page_environments_remove_dialog_confirm_button": {},
+    "main_page_environments_error_dialog_title": "Erro!",
+    "@main_page_environments_error_dialog_title": {},
+    "main_page_environments_error_dialog_subtitle": "Por favor, selecione o caminho do jogo primeiro!",
+    "@main_page_environments_error_dialog_subtitle": {},
+    "main_page_environments_loading_mods_list_message": "Carregando detalhes da lista de mods\nPode levar um tempo dependendo do número de mods",
+    "@main_page_environments_loading_mods_list_message": {},
+    "main_page_environments_loading_profiles_list_message": "Carregando perfis",
+    "@main_page_environments_loading_profiles_list_message": {},
+    "settings_page_toolbar_title": "Configurações",
+    "@settings_page_toolbar_title": {},
+    "settings_page_minimize_to_tray_title": "Minimizar para a bandeja do sistema ao clicar para minimizar.",
     "@settings_page_minimize_to_tray_title": {},
-    "settings_page_minimize_to_tray_description": "Quando o jogo inicia, a aplicação será minimizada para a bandeja do sistema.",
+    "settings_page_minimize_to_tray_description": "Quando o jogo iniciar, o aplicativo será minimizado para a bandeja do sistema.",
     "@settings_page_minimize_to_tray_description": {},
-    "settings_page_theme_title": "Modo do Tema",
+    "settings_page_theme_title": "Modo de Tema",
     "@settings_page_theme_title": {},
     "settings_page_language_title": "Idioma",
     "@settings_page_language_title": {},
-    "settings_page_launch_arguments_title": "Argumentos de Lançamento",
+    "settings_page_launch_arguments_title": "Argumentos de Inicialização",
     "@settings_page_launch_arguments_title": {},
-    "settings_page_launch_arguments_description": "Argumentos de lançamento para serem passados ao jogo.",
+    "settings_page_launch_arguments_description": "Argumentos de inicialização a serem passados para o jogo.",
     "@settings_page_launch_arguments_description": {},
     "settings_page_game_configurations": "Configurações do Jogo",
     "@settings_page_game_configurations": {},
-    "language_name_en": "Inglês",
+    "language_name_en": "Inglês",
     "@language_name_en": {},
-    "language_name_pt": "Português",
+    "language_name_pt": "Português",
     "@language_name_pt": {},
     "theme_mode_system": "Sistema",
     "@theme_mode_system": {},
@@ -123,10 +123,12 @@
     "@theme_mode_dark": {},
     "message_starting_the_game": "Iniciando o jogo",
     "@message_starting_the_game": {},
-    "tray_tooltip": "ETS2 Environments rodando",
+    "tray_tooltip": "ETS2 Environments em execução",
     "@tray_tooltip": {},
-    "tray_menu_option_show": "Mostrar",
-    "@tray_menu_option_show": {},
+    "tray_menu_option_environment_title": "Opções de Ambiente",
+    "@tray_menu_option_environment_title": {},
+    "tray_menu_option_start_from_specific_environment": "Iniciar apartir de",
+    "@tray_menu_option_start_from_specific_environment": {},
     "tray_menu_option_close": "Fechar",
     "@tray_menu_option_close": {}
 }
