--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -11,92 +11,92 @@
     "@main_page_pick_game_executable_dialog_error": {},
     "main_page_toolbar_game_not_found": "Euro Truck Simulator 2 not found!",
     "@main_page_toolbar_game_not_found": {},
-    "main_page_empty_homedirs": "You do not have any homedirs yet.",
-    "@main_page_empty_homedirs": {},
-    "main_page_add_new_homedir": "Add New Homedir",
-    "@main_page_add_new_homedir": {},
-    "main_page_dialog_title": "Add New Homedir",
-    "@main_page_dialog_title": {},
-    "main_page_dialog_field_name": "Name",
-    "@main_page_dialog_field_name": {},
-    "main_page_dialog_field_name_hint": "Enter the name of the new homedir.",
-    "@main_page_dialog_field_name_hint": {},
-    "main_page_dialog_field_name_error": "Please enter a name!",
-    "@main_page_dialog_field_name_error": {},
-    "main_page_dialog_field_path": "Path",
-    "@main_page_dialog_field_path": {},
-    "main_page_dialog_field_path_hint": "Enter the path of the new homedir.",
-    "@main_page_dialog_field_path_hint": {},
-    "main_page_dialog_field_path_error": "Please enter a path!",
-    "@main_page_dialog_field_path_error": {},
-    "main_page_dialog_field_path_error_not_exist": "Path does not exist!",
-    "@main_page_dialog_field_path_error_not_exist": {},
-    "main_page_dialog_button_add": "Add",
-    "@main_page_dialog_button_add": {},
-    "main_page_item_options_profiles": "List Local Profiles",
-    "@main_page_item_options_profiles": {},
-    "main_page_item_options_mods": "List Local Mods",
-    "@main_page_item_options_mods": {},
-    "main_page_item_options_add_mods": "Add Mods",
-    "@main_page_item_options_add_mods": {},
-    "main_page_item_options_open_in_explorer": "Open in Explorer",
-    "@main_page_item_options_open_in_explorer": {},
-    "main_page_item_options_enable_camera_zero": "Enable Camera Zero",
-    "@main_page_item_options_enable_camera_zero": {},
-    "main_page_item_options_disable_camera_zero": "Disable Camera Zero",
-    "@main_page_item_options_disable_camera_zero": {},
-    "main_page_enable_camera_zero_enabled_message": "Camera Zero is enabled.",
-    "@main_page_enable_camera_zero_enabled_message": {},
-    "main_page_enable_camera_zero_disabled_message": "Camera Zero is disabled.",
-    "@main_page_enable_camera_zero_disabled_message": {},
-    "main_page_item_options_remove": "Remove",
-    "@main_page_item_options_remove": {},
-    "main_page_item_start_game_tooltip": "Start game from this homedir",
-    "@main_page_item_start_game_tooltip": {},
-    "main_page_item_menu_tooltip": "Show options",
-    "@main_page_item_menu_tooltip": {},
-    "main_page_select_folder_dialog_title": "Select a folder to your new homedir",
-    "@main_page_select_folder_dialog_title": {},
-    "main_page_select_mods_dialog_title": "Select mods that you want to add to this homedir",
-    "@main_page_select_mods_dialog_title": {},
-    "main_page_profiles_dialog_title": "Profiles (Local Only)",
-    "@main_page_profiles_dialog_title": {},
-    "main_page_profiles_dialog_active_mods": "Active Mods",
-    "@main_page_profiles_dialog_active_mods": {},
-    "main_page_profiles_dialog_empty": "No profiles found.",
-    "@main_page_profiles_dialog_empty": {},
-    "main_page_mods_dialog_title": "Mods (Local Only)",
-    "@main_page_mods_dialog_title": {},
-    "main_page_mods_dialog_empty": "No mods found.",
-    "@main_page_mods_dialog_empty": {},
-    "main_page_mods_dialog_author": "Author",
-    "@main_page_mods_dialog_author": {},
-    "main_page_mods_dialog_version": "Version",
-    "@main_page_mods_dialog_version": {},
-    "main_page_mods_dialog_categories": "Categories",
-    "@main_page_mods_dialog_categories": {},
-    "main_page_mods_dialog_compatible_versions": "Compatible Versions",
-    "@main_page_mods_dialog_compatible_versions": {},
-    "main_page_remove_homedir_dialog_title": "Remove This Homedir?",
-    "@main_page_remove_homedir_dialog_title": {},
-    "main_page_remove_homedir_dialog_description": "Are you sure you want to remove this homedir?",
-    "@main_page_remove_homedir_dialog_description": {},
-    "main_page_remove_homedir_dialog_keep_directories": "Keep the directory folder?",
-    "@main_page_remove_homedir_dialog_keep_directories": {},
-    "main_page_remove_homedir_dialog_button_cancel": "Cancel",
-    "@main_page_remove_homedir_dialog_button_cancel": {},
-    "main_page_remove_homedir_dialog_button_confirm": "Yes, remove it!",
-    "@main_page_remove_homedir_dialog_button_confirm": {},
-    "main_page_add_homedir_dialog_error_title": "Error!",
-    "@main_page_add_homedir_dialog_error_title": {},
-    "main_page_add_homedir_dialog_error_message": "Please select the game path first!",
-    "@main_page_add_homedir_dialog_error_message": {},
-    "main_page_loading_mods_list_message": "Loading mods list details\nIt may take a while depending on the number of mods",
-    "@main_page_loading_mods_list_message": {},
-    "main_page_loading_profiles_list_message": "Loading profiles",
-    "@main_page_loading_profiles_list_message": {},
-    "settings_page_title": "Settings",
-    "@settings_page_title": {},
+    "main_page_empty_environments_message": "You do not have any environments yet.",
+    "@main_page_empty_environments_message": {},
+    "main_page_fab_title": "Add New Environment",
+    "@main_page_fab_title": {},
+    "add_environment_dialog_title": "Add New Environment",
+    "@add_environment_dialog_title": {},
+    "add_environment_dialog_field_name": "Name",
+    "@add_environment_dialog_field_name": {},
+    "add_environment_dialog_field_name_hint": "Enter the name of the new environment.",
+    "@add_environment_dialog_field_name_hint": {},
+    "add_environment_dialog_field_name_error": "Please enter a name!",
+    "@add_environment_dialog_field_name_error": {},
+    "add_environment_dialog_field_path": "Path",
+    "@add_environment_dialog_field_path": {},
+    "add_environment_dialog_field_path_hint": "Enter the path of the new environment.",
+    "@add_environment_dialog_field_path_hint": {},
+    "add_environment_dialog_field_path_error": "Please enter a path!",
+    "@add_environment_dialog_field_path_error": {},
+    "add_environment_dialog_field_path_error_not_exists": "Path does not exist!",
+    "@add_environment_dialog_field_path_error_not_exists": {},
+    "add_environment_dialog_button_title": "Add",
+    "@add_environment_dialog_button_title": {},
+    "main_page_environments_profiles_item": "List Local Profiles",
+    "@main_page_environments_profiles_item": {},
+    "main_page_environments_mods_item": "List Local Mods",
+    "@main_page_environments_mods_item": {},
+    "main_page_environments_add_mods_item": "Add Mods",
+    "@main_page_environments_add_mods_item": {},
+    "main_page_environments_open_in_explorer_item": "Open in Explorer",
+    "@main_page_environments_open_in_explorer_item": {},
+    "main_page_environments_enable_camera_zero_item": "Enable Camera Zero",
+    "@main_page_environments_enable_camera_zero_item": {},
+    "main_page_environments_enable_camera_zero_item_message": "Camera Zero is enabled.",
+    "@main_page_environments_enable_camera_zero_item_message": {},
+    "main_page_environments_disable_camera_zero_item": "Disable Camera Zero",
+    "@main_page_environments_disable_camera_zero_item": {},
+    "main_page_environments_disable_camera_zero_item_message": "Camera Zero is disabled.",
+    "@main_page_environments_disable_camera_zero_item_message": {},
+    "main_page_environments_remove_item": "Remove",
+    "@main_page_environments_remove_item": {},
+    "main_page_environments_start_game_tooltip": "Start game from this environment",
+    "@main_page_environments_start_game_tooltip": {},
+    "main_page_environments_show_menu_tooltip": "Show options",
+    "@main_page_environments_show_menu_tooltip": {},
+    "main_page_environments_pick_environment_folder_selector_title": "Select a folder to your new environment",
+    "@main_page_environments_pick_environment_folder_selector_title": {},
+    "main_page_environments_pick_mods_selector_title": "Select mods that you want to add to this environment",
+    "@main_page_environments_pick_mods_selector_title": {},
+    "main_page_environments_profiles_dialog_title": "Profiles (Local Only)",
+    "@main_page_environments_profiles_dialog_title": {},
+    "main_page_environments_active_mods_dialog_subtitle": "Active Mods",
+    "@main_page_environments_active_mods_dialog_subtitle": {},
+    "main_page_environments_profiles_dialog_empty_message": "No profiles found.",
+    "@main_page_environments_profiles_dialog_empty_message": {},
+    "main_page_environments_mods_dialog_title": "Mods (Local Only)",
+    "@main_page_environments_mods_dialog_title": {},
+    "main_page_environments_mods_dialog_empty_message": "No mods found.",
+    "@main_page_environments_mods_dialog_empty_message": {},
+    "main_page_environments_mods_dialog_author_subtitle": "Author",
+    "@main_page_environments_mods_dialog_author_subtitle": {},
+    "main_page_environments_mods_dialog_version_subtitle": "Version",
+    "@main_page_environments_mods_dialog_version_subtitle": {},
+    "main_page_environments_mods_dialog_categories_subtitle": "Categories",
+    "@main_page_environments_mods_dialog_categories_subtitle": {},
+    "main_page_environments_mods_dialog_compatibility": "Compatible Versions",
+    "@main_page_environments_mods_dialog_compatibility": {},
+    "main_page_environments_remove_dialog_title": "Remove This Environment?",
+    "@main_page_environments_remove_dialog_title": {},
+    "main_page_environments_remove_dialog_subtitle": "Are you sure you want to remove this environment?",
+    "@main_page_environments_remove_dialog_subtitle": {},
+    "main_page_environments_remove_dialog_check_title": "Keep the directory folder?",
+    "@main_page_environments_remove_dialog_check_title": {},
+    "main_page_environments_remove_dialog_cancel_button": "Cancel",
+    "@main_page_environments_remove_dialog_cancel_button": {},
+    "main_page_environments_remove_dialog_confirm_button": "Yes, remove it!",
+    "@main_page_environments_remove_dialog_confirm_button": {},
+    "main_page_environments_error_dialog_title": "Error!",
+    "@main_page_environments_error_dialog_title": {},
+    "main_page_environments_error_dialog_subtitle": "Please select the game path first!",
+    "@main_page_environments_error_dialog_subtitle": {},
+    "main_page_environments_loading_mods_list_message": "Loading mods list details\nIt may take a while depending on the number of mods",
+    "@main_page_environments_loading_mods_list_message": {},
+    "main_page_environments_loading_profiles_list_message": "Loading profiles",
+    "@main_page_environments_loading_profiles_list_message": {},
+    "settings_page_toolbar_title": "Settings",
+    "@settings_page_toolbar_title": {},
     "settings_page_minimize_to_tray_title": "Minimize to system tray when click to minimize.",
     "@settings_page_minimize_to_tray_title": {},
     "settings_page_minimize_to_tray_description": "When the game starts, the app will minimize to system tray.",
@@ -125,8 +125,10 @@
     "@message_starting_the_game": {},
     "tray_tooltip": "ETS2 Environments running",
     "@tray_tooltip": {},
-    "tray_menu_option_show": "Show",
-    "@tray_menu_option_show": {},
+    "tray_menu_option_environment_title": "Environment Options",
+    "@tray_menu_option_environment_title": {},
+    "tray_menu_option_start_from_specific_environment": "Start from",
+    "@tray_menu_option_start_from_specific_environment": {},
     "tray_menu_option_close": "Close",
     "@tray_menu_option_close": {}
 }
